# predictium-api

./: .gitignore  Dockerfile  README.md  buildspec.yml  check_subscriptions.py  cloudshell-simple.sh  docker-compose.yml  env.example.txt  provision_user.py  requirements.txt  temp-sg-rule.json  update_beta_cloudshell.sh  update_beta_to_elite.sql  update_beta_users.py  update_beta_users_cli.py  update_beta_via_ecs.sh  update_subs_simple.py  upgrade_user.py
app/: __init__.py  config.py  dependencies.py  main.py
app/db/: __init__.py  database.py
app/models/: __init__.py  coupon.py  page_view.py  subscription.py  user.py
app/routers/: __init__.py  admin.py  analytics.py  auth.py  billing.py  health.py  meta.py  predictions.py  webhooks.py
app/services/: __init__.py  analytics_service.py  cognito.py  prediction_service.py  report_scheduler.py  stripe_service.py
database/init/: 00_init.sql
docs/: ODDS_INGESTION_COVERAGE_MATRIX.md
predictium_odds/: README.md  pyproject.toml
predictium_odds/predictium_odds/: __init__.py  health.py  lines.py  oddsmath.py  schema.py
predictium_odds/predictium_odds/books/: __init__.py  base.py  bovada.py  espn.py  fanduel.py  kalshi.py  pinnacle.py
predictium_odds/tests/: test_adapters.py  test_lines_health.py  test_oddsmath.py
